<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/dp10"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|left"
        android:layout_margin="@dimen/dp10" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginBottom="@dimen/dp10"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center|right"
            android:textColor="@color/black"
            android:layout_marginLeft="@dimen/dp10"
            android:text="@string/selected_1" />
        <TextView
            android:id="@+id/fileTypeOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:paddingLeft="@dimen/dp5"
            android:paddingRight="@dimen/dp5"
            android:layout_marginLeft="@dimen/dp10"
            android:background="@color/JadeGreen"
            android:gravity="center"
            android:text="" />
        <TextView
            android:id="@+id/selectedOne"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dp10"
            android:gravity="center_vertical"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center|right"
            android:textColor="@color/black"
            android:layout_marginLeft="@dimen/dp10"
            android:text="@string/selected_2" />
        <TextView
            android:id="@+id/fileTypeTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:paddingLeft="@dimen/dp5"
            android:paddingRight="@dimen/dp5"
            android:layout_marginLeft="@dimen/dp10"
            android:background="@color/JadeGreen"
            android:gravity="center"
            android:text="" />
        <TextView
            android:id="@+id/selectedTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_marginLeft="@dimen/dp10"
            android:gravity="center_vertical"
            android:text="" />
    </LinearLayout>

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_add"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"

        >

        <Button
            android:id="@+id/cancel"
            android:layout_width="@dimen/dp100"
            android:layout_height="wrap_content"
            android:background="@color/dialog_cancel"
            android:drawablePadding="@dimen/margin_tiny"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/text_small"
            android:textStyle="bold" />


        <Button
            android:id="@+id/compare"
            android:layout_width="@dimen/dp100"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:background="@color/dialog_compare"
            android:drawablePadding="@dimen/margin_tiny"
            android:text="@string/compare"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/text_small"
            android:textStyle="bold" />
    </android.support.v7.widget.Toolbar>

</LinearLayout>